--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
 <h3>User</h3>
-<p>Name: <%= @user.first_name if @user.first_name + (" " + @user.last_name if @user.last_name) %></p>
+<p>Name: <%= @user.name %></p>
 <p>Email: <%= @user.email if @user.email %></p>
