--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -2,10 +2,10 @@
 nav.top-bar[data-topbar]
   ul.title-area
     li.name
-      = link_to 'Home', root_path
+      = link_to 'ColorSisters', root_path
     li.toggle-topbar.menu-icon
       a[href="#"]
         Menu
   .top-bar-section
-    ul
+    ul.right
       == render 'layouts/navigation_links'
