--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -1,7 +1,12 @@
 td
-  = link_to user.email, user
+  = link_to user.last_name, user
 td
-  = form_for(user) do |f|
+  = user.first_name
+td
+  = user.email
+td
+  = simple_form_for(user) do |f|
+
     = f.select(:role, User.roles.keys.map {|role| [role.titleize,role]})
     = f.submit 'Change Role', :class => 'button-xs'
 td
