--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -2,9 +2,27 @@
   .row
     h3
       | Users
-    .column
-      table.table
+      
+      / = search_form_for @q do |f|
+        
+
+      table#users
+        thead
+          tr
+            th = sort_link @q, :last_name, "Last Name", default_order: :desc
+            th = sort_link @q, :first_name, "First Name"
+            th = sort_link @q, :email, "Email"
+            th = sort_link @q, :role, "Role"
+            th = "Operations"
         tbody
-          - @users.each do |user|
+           - for usr in @users do
             tr
-              = render user
+              td = link_to "#{usr.last_name}",  user_path(usr)
+              td = usr.first_name
+              td = usr.email
+              td = usr.role
+              /TODO Add icons for operations
+              td = link_to('Edit', edit_user_registration_path(usr)) + " | " + link_to('Delete', user_path(usr), :data => { :confirm => "Are you sure?" }, method: :delete)
+              /TODO Create test for delete
+        = paginate(@users)
+        
