--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,7 +4,7 @@ html
     meta[name="viewport" content="width=device-width, initial-scale=1.0"]
     title
       = content_for?(:title) ? yield(:title) : 'ColorSisters'
-    meta name="description" content="#{content_for?(:description) ? yield(:description) : 'Schoolnet'}"
+    meta name="description" content="#{content_for?(:description) ? yield(:description) : 'ColorSisters'}"
     == stylesheet_link_tag "application", :media => 'all', 'data-turbolinks-track' => true
     / Modernizr is required for Zurb Foundation
     == javascript_include_tag 'vendor/modernizr'
