--- a/app/views/devise/registrations/show.html.slim
+++ b/app/views/devise/registrations/show.html.slim
@@ -1,15 +1,13 @@
 h3
   | Viewing User
-p
-  | Name: 
-  = @user.name
-p
-  | Email: 
-  = @user.email if @user.email
 
-  #FIXME Fix this to disply all fields in to columns
-  - attribs = resource.attributes 
-  - attribs.keys.each do |key|
+  table.show#users
+    thead
+    tbody
+      - User.show_attributes.each do |key|
+        tr
+          td#user_label = key.to_s.humanize
+          td#user_data = resource.send(key)
 
-    p = key.humanize
-  -end
+
+
