--- a/app/views/devise/registrations/index.html.slim
+++ b/app/views/devise/registrations/index.html.slim
@@ -2,27 +2,53 @@
   .row
     h3
       | Users
-      
-      = search_form_for @q do |f|
-        
 
-      table#users
-        thead
-          tr
-            th = sort_link @q, :last_name, "Last Name", default_order: :desc
-            th = sort_link @q, :first_name, "First Name"
-            th = sort_link @q, :email, "Email"
-            th = sort_link @q, :role, "Role"
-            th = "Operations"
-        tbody
-           - for usr in @users do
-            tr
-              td = link_to "#{usr.last_name}",  userx_registration_path(usr)
-              td = usr.first_name
-              td = usr.email
-              td = usr.role
-              /TODO Add icons for operations
-              td = link_to('Edit', edit_userx_registration_path(usr), id: "edit_#{usr.id}") + " | " + link_to('Delete', user_registration_path(usr), id: "delete_#{usr.id}", :data => { :confirm => "Are you sure?" }, method: :delete)
-              /TODO Create test for delete
-        = paginate(@users)
+      
+    = search_form_for @search, url: search_users_path do |f|
+      fieldset 
+        legend Column Sorting
+        = f.sort_fields do |s|
+          = render 'devise/registrations/users/sort_fields', f: s 
+        = link_to_add_fields "Add Sort", f, :sort
+        
+      fieldset 
+        legend Search Conditions
+        = f.condition_fields do |c|
+          = render "devise/registrations/users/condition_fields", f: c
+        = link_to_add_fields "Add Conditions", f, :condition
+      div.field.row
+        / Sort:
+        / = f.sort_fields do |s|
+        /   = s.sort_select
+      div.actions
+      p
+        = f.submit "Search"
+    p
+      = render 'devise/registrations/users/results'
+          
+      /
+      / table#users
+      /   thead
+      /     tr
+      /       th = sort_link @search, :last_name, "Last Name", default_order: :desc
+      /       th = sort_link @search, :first_name, "First Name"
+      /       th = sort_link @search, :email, "Email"
+      /       th = sort_link @search, :role, "Role"
+      /       th = sort_link @search, :last_sign_in_at, "Last Sign in"
+      /       th = sort_link @search, :created_at, "Created"
+      /       th = "Operations"
+      /   tbody
+      /      - for usr in @users do
+      /       tr
+      /         td = link_to "#{usr.last_name}",  userx_registration_path(usr)
+      /         td = usr.first_name
+      /         td = usr.email
+      /         td = usr.role
+      /         td = usr.last_sign_in_at
+      /         td = usr.created_at
+      /         /TODO Add icons for operations
+      /         td = link_to('Edit', edit_userx_registration_path(usr), id: "edit_#{usr.id}") + " | " +                               link_to('Delete', user_registration_path(usr), id: "delete_#{usr.id}",
+      /                        :data => { :confirm => "Are you sure?" }, method: :delete)
+      /         /TODO Create test for delete
+      /   = paginate(@users)
         
