--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,5 +14,7 @@ html
     header
       == render 'layouts/navigation'
     main[role="main"]
+      = "Logged in as #{current_user.name}"  unless current_user.blank?
+      
       == render 'layouts/messages'
       == yield
