--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,11 +1,20 @@
 .authform
   = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :role => 'form'}) do |f|
     h3
-      | Forgot your password?
-    p
-      | We'll send password reset instructions.
-    = devise_error_messages!
-    .form-group
-      = f.label :email
-      = f.email_field :email, :autofocus => true, class: 'form-control', id: 'new_password_email'
-    = f.submit 'Reset Password', :class => 'button right', id: 'reset_password_submit'
+      | Reset Password
+    .row
+      .panel.columns.large-6.large-centered.medium-8.medium-centered
+        p
+          | We'll send password reset instructions to your email address.
+        .row
+          = devise_error_messages!
+        .row
+          .columns.large-12.large-centered.medium-12.medium-centered
+            = f.label :email
+            = f.email_field :email, :autofocus => true, class: 'form-control', id: 'new_password_email'
+        .row
+          .columns.large-12.large-centered.medium-12.medium-centered
+            = f.submit 'Reset Password', :class => 'button expand', id: 'reset_password_submit'
+  .row
+    = button_to "Cancel", root_path, method: :get, class: "button left"
+    
