--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -2,33 +2,39 @@
   h3
     | Edit 
     = resource_name.to_s.humanize
-  = simple_form_for(resource, :as => resource_name, :url => userx_registration_path(resource), :html => { :method => :put, :role => 'form'}) do |f|
+  = form_for(resource, :as => resource_name, :url => userx_registration_path(resource), :html => { :method => :put, :role => 'form'}) do |f|
     = devise_error_messages!
-    .form-group
-      = f.label :first_name
-      = f.text_field :first_name, :autofocus => true, class: 'form-control'
-    .form-group
-      = f.label :last_name
-      = f.text_field :last_name, :autofocus => true, class: 'form-control'
-    .form-group
-      = f.label :email
-      = f.email_field :email, class: 'form-control'
-      - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-        div
-          | Currently waiting confirmation for: 
-          = resource.unconfirmed_email
-    fieldset
-      p
-        | Leave these fields blank if you don't want to change your password.
-      .form-group
-        = f.label :password
-        = f.password_field :password, :autocomplete => 'off', class: 'form-control'
-      .form-group
-        = f.label :password_confirmation
-        = f.password_field :password_confirmation, class: 'form-control'
-      
-    = f.submit 'Update', :class => 'button'
-
-p
-/ TODO add back button
-  = button_to "Back", :back_path, class: 'button right'
+    .panel
+      .row
+        .large-6.columns.form-group
+          = f.label :first_name
+          = f.text_field :first_name, :autofocus => true, class: 'form-control'
+        .form-group.large-6.columns
+          = f.label :last_name
+          = f.text_field :last_name, :autofocus => true, class: 'form-control'
+      .row
+        .large-6.columns.form-group
+          = f.label :email
+          = f.email_field :email, class: 'form-control'
+        - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+          div
+            | Currently waiting confirmation for: 
+            = resource.unconfirmed_email
+      fieldset
+        legend Change Password
+        .row.form-group
+          p
+            | Leave these fields blank if you don't want to change your password.
+            .large-6.columns
+              = f.label :password
+              = f.password_field :password, :autocomplete => 'off', class: 'form-control'
+            .large-6.columns
+              = f.label :password_confirmation
+              = f.password_field :password_confirmation, class: 'form-control'
+      .row
+        .large-12.columns
+            = f.submit 'Update', :class => 'button expand'
+  .row
+    .large-12.columns
+        = button_to "Cancel", build_cancel_path,  method: :get, class: 'button'
+    
