--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -2,20 +2,24 @@
   = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :role => 'form'}) do |f|
     h3
       | Sign up
-    = devise_error_messages!
-    .form-group
-      = f.label :first_name
-      = f.text_field :first_name, :autofocus => true, class: 'form-control'
-    .form-group
-      = f.label :last_name
-      = f.text_field :last_name, :autofocus => true, class: 'form-control'
-    .form-group
-      = f.label :email
-      = f.email_field :email, class: 'form-control'
-    .form-group
-      = f.label :password
-      = f.password_field :password, class: 'form-control'
-    .form-group
-      = f.label :password_confirmation
-      = f.password_field :password_confirmation, class: 'form-control'
-    = f.submit 'Sign up', :class => 'button right'
+    .panel
+      = devise_error_messages!
+      .row
+        .columns.large-6
+          = f.label :first_name
+          = f.text_field :first_name, :autofocus => true, class: 'form-control'
+        .columns.large-6.end
+          = f.label :last_name
+          = f.text_field :last_name, :autofocus => true, class: 'form-control'
+      .row
+        .columns.large-6
+          = f.label :email
+          = f.email_field :email, class: 'form-control'
+        .columns.large-6.end
+          = f.label :password
+          = f.password_field :password, class: 'form-control'
+      .row
+        = f.submit 'Sign up', :class => 'button expand'
+  .row
+    = button_to "Cancel", root_path, method: :get, class: "button left"
+        
