--- a/app/views/layouts/_navigation_links.html.slim
+++ b/app/views/layouts/_navigation_links.html.slim
@@ -12,4 +12,4 @@
 - if user_signed_in?
   - if current_user.admin?
     li
-      = link_to 'Users', users_path
+      = link_to 'Users', search_users_path
