--- a/app/views/profiles/new.html.slim
+++ b/app/views/profiles/new.html.slim
@@ -1,25 +1,25 @@
 h3
-  | Sign up
-  
-= simple_form_for(@profile_form, :url => user_registration_path) do |f|
+  | Create Profile
+= simple_form_for(@profile_form, :url => profiles_path(@profile_form.profile), :html => { :method => :post}) do |f|
   = error_messages! @profile_form
   .panel
     .row
       .large-6.columns.medium-6
-        = f.input :first_name, :autofocus => true
+        = f.input :first_name, :autofocus => true, class: 'form-control'
       .large-6.columns.medium-6
-        = f.input :last_name
+        = f.input :last_name, :autofocus => true, class: 'form-control'
     .row
-      .large-6.columns.medium-6.small-12
+      .large-6.columns.medium-6.small-8
         = f.input :email
-      .large-6.columns.medium-6.small-8.text-left
-        = f.input :receive_emails, as: :boolean, boolean_style: :inline
+      -if current_user.admin?
+        .columns.large-3.medium-3.small-4.left
+          = f.input :role, collection: User.roles.keys
+        
     fieldset
       legend Mailing address
       .row
         .columns.large-12
           h6 Please share you're mailing address if you'd like to be on the waiting list to receive a Color Match card to use our service when they become available.
-          br
       .row
         .columns.large-6.medium-6
           = f.input :street1
@@ -30,20 +30,19 @@ h3
           = f.input :city
         .columns.large-2.medium-2.small-4
           = f.input :state, collection: ProfileForm::STATES
-        .columns.large-4.medium-4.small-8
+        .columns.large-3.medium-3.small-8
           = f.input :postal_code, label: 'Zip code'
-
+          
     fieldset
-      legend Create Account
+      legend Change Password
       .row
-      .coilumns.large-12
-        h6 Enter a password to create an account so you can view your results.
-        br
+        p
+          | Leave this field blank if you don't want to change your password.
           .large-6.columns.medium-6
             = f.input :password, :autocomplete => 'off', hint: "Minimum of 6 characters is required."
-    .row
-      .large-12.columns
-          = f.submit 'Update', :class => 'button expand'
+  .row
+    .large-12.columns
+        = f.submit 'Update', :class => 'button expand'
 .row
   .large-12.columns
-      = button_to "Cancel", root_path, method: :get, class: 'button'
+      = button_to "Cancel", :back, class: 'button'
