--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -43,7 +43,7 @@ h3
             = f.input :password, :autocomplete => 'off', hint: "Minimum of 6 characters is required."
     .row
       .large-12.columns
-          = f.submit 'Update', :class => 'button expand'
+          = f.submit 'Submit', :class => 'button expand'
 .row
   .large-12.columns
       = button_to "Cancel", root_path, method: :get, class: 'button'
