--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,14 +1,13 @@
-<a class="th" href="/images/category_makeup.png">
-  <img src="/images/category_makeup.png">
-</a>
+= image_tag('home_page/header.jpg', class: "wide", alt: "ColorSisters Home Page")
+ul.imagelist.small-block-grid-3
+  li.row-item
+    = image_tag('home_page/step1.jpg', class: "row-image", alt: "ColorSisters Step 1")
+  li
+    = image_tag('home_page/step2.jpg', class: "row-image", alt: "ColorSisters Step 2")
+  li
+    = image_tag('home_page/step3.jpg', class: "row-image", alt: "ColorSisters Step 3")
 
-<a class="th" href="/images/MMGJ01.jpg">
-  <img src="/images/MMGJ01.jpg">
-</a>
 
-<a class="th" href="/images/MU_CAT_780x280_Brushes.jpg">
-  <img src="/images/MU_CAT_780x280_Brushes.jpg">
-</a>
 
 
 
