--- a/app/views/profiles/new.html.slim
+++ b/app/views/profiles/new.html.slim
@@ -9,12 +9,10 @@ h3
       .large-6.columns.medium-6
         = f.input :last_name, :autofocus => true, class: 'form-control'
     .row
-      .large-6.columns.medium-6.small-8
+      .large-6.columns.medium-6.small-12
         = f.input :email
-      -if current_user.admin?
-        .columns.large-3.medium-3.small-4.left
-          = f.input :role, collection: User.roles.keys
-        
+      .columns.large-6.medium-6.small-12.left
+        = f.input :source
     fieldset
       legend Mailing address
       .row
@@ -42,7 +40,7 @@ h3
             = f.input :password, :autocomplete => 'off', hint: "Minimum of 6 characters is required."
   .row
     .large-12.columns
-        = f.submit 'Update', :class => 'button expand'
+        = f.submit 'Submit', :class => 'button expand'
 .row
   .large-12.columns
       = button_to "Cancel", :back, class: 'button'
