Reformat after adding home page images

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,12 @@
  *= require video-js
  *= require_tree .
  */
+
+.cbutton{
+  display: inline-block;
+}
+
+
 ul.imagelist li{
   padding:0;
   margin:0;
