Shifted buttons from right to left

--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -53,4 +53,4 @@
   .row
   br
     .large-12.columns
-        = button_to "Cancel", :back, method: :get, class: 'button right'    
+        = button_to "Cancel", :back, method: :get, class: 'button left'    
