--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -50,4 +50,4 @@
   .row
   br
     .large-12.columns
-        = button_to "Cancel", root_path, method: :get, class: 'button right'
+        = button_to "Cancel", root_path, method: :get, class: 'button left'
